# xerces-c-modules

./: CMakeLists.txt  Modules.cmake
src/: CMakeLists.txt  module.cppm  stricmp.cppm  strnicmp.cppm  towlower.cppm  towupper.cppm
src/xercesc/: util-xinclude.cppm
src/xercesc/dom/: DOM.cppm  DOMAttr.cppm  DOMCDATASection.cppm  DOMCharacterData.cppm  DOMComment.cppm  DOMConfiguration.cppm  DOMDocument.cppm  DOMDocumentFragment.cppm  DOMDocumentRange.cppm  DOMDocumentTraversal.cppm  DOMDocumentType.cppm  DOMElement.cppm  DOMEntity.cppm  DOMEntityReference.cppm  DOMError.cppm  DOMErrorHandler.cppm  DOMException.cppm  DOMImplementation.cppm  DOMImplementationLS.cppm  DOMImplementationList.cppm  DOMImplementationRegistry.cppm  DOMImplementationSource.cppm  DOMLSException.cppm  DOMLSInput.cppm  DOMLSOutput.cppm  DOMLSParser.cppm  DOMLSParserFilter.cppm  DOMLSResourceResolver.cppm  DOMLSSerializer.cppm  DOMLSSerializerFilter.cppm  DOMLocator.cppm  DOMMemoryManager.cppm  DOMMemoryManager.hpp  DOMNamedNodeMap.cppm  DOMNode.cppm  DOMNodeFilter.cppm  DOMNodeIterator.cppm  DOMNodeList.cppm  DOMNotation.cppm  DOMPSVITypeInfo.cppm  (+16 more)
src/xercesc/dom/impl/: DOMAttrImpl.cppm  DOMAttrMapImpl.cppm  DOMAttrNSImpl.cppm  DOMCDATASectionImpl.cppm  DOMCasts.cppm  DOMCharacterDataImpl.cppm  DOMChildNode.cppm  DOMCommentImpl.cppm  DOMConfigurationImpl.cppm  DOMDeepNodeListImpl.cppm  DOMDeepNodeListPool.cppm  DOMDocumentFragmentImpl.cppm  DOMDocumentImpl.cppm  DOMDocumentTypeImpl.cppm  DOMElementImpl.cppm  DOMElementNSImpl.cppm  DOMEntityImpl.cppm  DOMEntityReferenceImpl.cppm  DOMErrorImpl.cppm  DOMImplementationImpl.cppm  DOMImplementationListImpl.cppm  DOMImplementationRegistry.cppm  DOMLSInputImpl.cppm  DOMLSOutputImpl.cppm  DOMLSSerializerImpl.cppm  DOMLocatorImpl.cppm  DOMNamedNodeMapImpl.cppm  DOMNodeBase.cppm  DOMNodeIDMap.cppm  DOMNodeImpl.cppm  DOMNodeIteratorImpl.cppm  DOMNodeListImpl.cppm  DOMNodeVector.cppm  DOMNormalizer.cppm  DOMNotationImpl.cppm  DOMParentNode.cppm  DOMParentNode.hpp  DOMProcessingInstructionImpl.cppm  DOMRangeImpl.cppm  DOMStringListImpl.cppm  (+10 more)
src/xercesc/framework/: BinOutputStream.cppm  LocalFileFormatTarget.cppm  LocalFileInputSource.cppm  MemBufFormatTarget.cppm  MemBufInputSource.cppm  MemoryManager.cppm  StdInInputSource.cppm  StdOutFormatTarget.cppm  URLInputSource.cppm  ValidationContext.cppm  Wrapper4DOMLSInput.cppm  Wrapper4InputSource.cppm  XMLAttDef.cppm  XMLAttDefList.cppm  XMLAttr.cppm  XMLBuffer.cppm  XMLBufferMgr.cppm  XMLContentModel.cppm  XMLDTDDescription.cppm  XMLDocumentHandler.cppm  XMLElementDecl.cppm  XMLEntityDecl.cppm  XMLEntityHandler.cppm  XMLErrorCodes.cppm  XMLErrorReporter.cppm  XMLFormatter.cppm  XMLGrammarDescription.cppm  XMLGrammarPool.cppm  XMLGrammarPoolImpl.cppm  XMLNotationDecl.cppm  XMLPScanToken.cppm  XMLRecognizer.cppm  XMLRefInfo.cppm  XMLSchemaDescription.cppm  XMLValidator.cppm  XMLValidityCodes.cppm  framework-xml.cppm  module.cppm
src/xercesc/framework/psvi/: PSVIAttribute.cppm  PSVIAttributeList.cppm  PSVIElement.cppm  PSVIHandler.cppm  PSVIItem.cppm  XSAnnotation.cppm  XSAttributeDeclaration.cppm  XSAttributeGroupDefinition.cppm  XSAttributeUse.cppm  XSComplexTypeDefinition.cppm  XSConstants.cppm  XSElementDeclaration.cppm  XSFacet.cppm  XSIDCDefinition.cppm  XSModel.cppm  XSModelGroup.cppm  XSModelGroupDefinition.cppm  XSMultiValueFacet.cppm  XSNamedMap.cppm  XSNamespaceItem.cppm  XSNotationDeclaration.cppm  XSObject.cppm  XSParticle.cppm  XSSimpleTypeDefinition.cppm  XSTypeDefinition.cppm  XSValue.cppm  XSWildcard.cppm  module.cppm
src/xercesc/internal/: BinFileOutputStream.cppm  BinMemOutputStream.cppm  CharTypeTables.cppm  DGXMLScanner.cppm  ElemStack.cppm  EndOfEntityException.cppm  IANAEncodings.cppm  IGXMLScanner.cppm  IGXMLScanner2.cppm  MemoryManagerImpl.cppm  ReaderMgr.cppm  SGXMLScanner.cppm  ValidationContextImpl.cppm  VecAttrListImpl.cppm  VecAttributesImpl.cppm  WFXMLScanner.cppm  XMLInternalErrorHandler.cppm  XMLReader.cppm  XMLScanner.cppm  XMLScannerResolver.cppm  XProtoType.cppm  XSAXMLScanner.cppm  XSObjectFactory.cppm  XSerializable.cppm  XSerializationException.cppm  XSerializeEngine.cppm  XSerializeEngine.hpp  XTemplateSerializer.cppm  module.cppm
src/xercesc/parsers/: AbstractDOMParser.cppm  DOMLSParserImpl.cppm  SAX2XMLFilterImpl.cppm  SAX2XMLReaderImpl.cppm  SAXParser.cppm  XercesDOMParser.cppm
src/xercesc/sax/: AttributeList.cppm  DTDHandler.cppm  DocumentHandler.cppm  Dummy.cppm  EntityResolver.cppm  ErrorHandler.cppm  HandlerBase.cppm  InputSource.cppm  Locator.cppm  Parser.cppm  SAXException.cppm  SAXParseException.cppm  module.cppm
src/xercesc/sax2/: Attributes.cppm  ContentHandler.cppm  DeclHandler.cppm  DefaultHandler.cppm  LexicalHandler.cppm  SAX2XMLFilter.cppm  SAX2XMLReader.cppm  XMLReaderFactory.cppm  module.cppm  sax2Dummy.cppm
src/xercesc/util/: ArrayIndexOutOfBoundsException.cppm  Base64.cppm  BaseRefVectorOf.cppm  BinFileInputStream.cppm  BinInputStream.cppm  BinMemInputStream.cppm  BitOps.cppm  BitSet.cppm  CountedPointer.cppm  DefaultPanicHandler.cppm  EmptyStackException.cppm  EncodingValidator.cppm  FlagJanitor.cppm  Hash2KeysSetOf.cppm  Hashers.cppm  Hashers.hpp  HeaderDummy.cppm  HexBin.cppm  IOException.cppm  IllegalArgumentException.cppm  InvalidCastException.cppm  Janitor.cppm  JanitorExports.cppm  KVStringPair.cppm  KVStringPair.hpp  KeyRefPair.cppm  KeyValuePair.cppm  LogicalPath.cppm  Mutexes.cppm  NameIdPool.cppm  NoSuchElementException.cppm  NullPointerException.cppm  NumberFormatException.cppm  OutOfMemoryException.cppm  PSVIUni.cppm  PanicHandler.cppm  ParseException.cppm  PlatformUtils.cppm  QName.cppm  RefArrayOf.cppm  (+62 more)
src/xercesc/util/FileManagers/: PosixFileMgr.cppm  WindowsFileMgr.cppm
src/xercesc/util/MutexManagers/: NoThreadMutexMgr.cppm  PosixMutexMgr.cppm  StdMutexMgr.cppm  WindowsMutexMgr.cppm
src/xercesc/util/NetAccessors/: BinHTTPInputStreamCommon.cppm
src/xercesc/util/regx/: ASCIIRangeFactory.cppm  BMPattern.cppm  BlockRangeFactory.cppm  (+26 more)
src/xercesc/xinclude/: XIncludeDOMDocumentProcessor.cppm  XIncludeLocation.cppm  XIncludeUtils.cppm
(+198 files in other folders)
